<!--
  ~ Copyright 2019 PC Chin. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!-- General strings -->
    <string name="app_name">Study Assistant</string>
    <string name="notes">Notes</string>
    <string name="projects">Projects</string>
    <string name="exit">Exit</string>
    <string name="blank" />

    <string name="create_new">Create New</string>
    <string name="data_import">Import</string>
    <string name="data_export">Export</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="del">Delete</string>
    <string name="close">Close</string>
    <string name="title">Title</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="import_from">Import from</string>
    <string name="importing_subject">Importing Subject…</string>
    <string name="subject_exported">Subject exported to </string>
    <string name="enter_password">Enter Password</string>
    <string name="subject_conflict">Subject Conflict</string>
    <string name="merge">Merge</string>
    <string name="rename">Rename</string>
    <string name="rename_subject">Rename Subject</string>
    <string name="subject_imported">Subject Imported</string>
    <string name="select_file">Select File</string>
    <string name="select_subject_file">Select a .subject file</string>
    <string name="not_subject_file">The file that is selected is not a .subject file</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="set_blank_password">Leave blank to not set a password.</string>
    <string name="return_val">Return</string>

    <!-- String used in notifications -->
    <string name="notif_channel_notes_ID">notes</string>
    <string name="notif_channel_notes">Notes</string>
    <string name="notif_channel_notes_desc">Alert for individual notes</string>
    <string name="notif_channel_update_ID">updater</string>
    <string name="notif_channel_update">App Update</string>
    <string name="notif_channel_update_desc">Notify users of a newer app version</string>

    <!-- Strings used in MainActivity -->
    <string name="a_update_app">Update App</string>
    <string name="a_new_version">A newer version of the app is available. Would you like to update to the latest version?</string>
    <string name="a_downloading">Downloading the latest version…</string>
    <string name="a_app_updating">Updating app…</string>
    <string name="a_learn_more">Learn More</string>

    <!-- Strings used in group M -->
    <string name="m_about">About</string>
    <string name="m1_welcome">Welcome!</string>

    <string name="m2_copyright_p1">© 2019–</string>
    <string name="m2_copyright_p2">PC Chin</string>
    <string name="m2_version">Version: </string>
    <string name="m2_libraries_used">Libraries Used</string>
    <string name="m2_rss_used">Resources Used</string>

    <string name="m3_others">Others</string>
    <string name="m3_new_subject">New Subject…</string>
    <string name="m3_new_project">New Project…</string>
    <string name="m3_data_import">Import…</string>
    <string name="m3_nav_open">Open navigation drawer</string>
    <string name="m3_nav_close">Close navigation drawer</string>

    <!-- Strings used in group N -->
    <string name="n_change_subj">Change subject</string>
    <string name="n_last_edited">Last changed: </string>
    <string name="n_new_alert">New alert</string>

    <string name="n1_new_subject">New Subject</string>
    <string name="n1_subject_title">Subject title</string>

    <!-- Sorting methods used in Fragment n2 -->
    <string name="n2_sorting_method">Sort By</string>
    <string name="n2_sort_alpha_asc">A-Z</string>
    <string name="n2_sort_alpha_des">Z-A</string>
    <string name="n2_sort_date_asc">Ascending Date</string>
    <string name="n2_sort_date_des">Descending Date</string>
    <string name="n2_subject_renamed">Subject renamed</string>

    <!-- General notes used in Fragment n2 -->
    <string name="n2_new_note">New note</string>
    <string name="n2_exporting_subject">Exporting Subject…</string>
    <string name="n2_del_confirm">Delete subject?</string>
    <string name="n2_deleted">Subject deleted</string>
    <string name="n2_note_locked_details">This note has been locked and cannot be edited.</string>
    <string name="n2_note_has_alert">An alert has been set for the note.</string>
    <string name="n2_export_format">Export to</string>
    <string name="n2_password_export">Enter Password for Exported File</string>

    <string name="n3_del_confirm">Delete note?</string>
    <string name="n3_deleted">Note deleted</string>
    <string name="n3_lock_note">Lock Note</string>
    <string name="n3_note_locked">Note locked</string>
    <string name="n3_note_unlocked">Note unlocked</string>
    <string name="n3_lock_password">Enter Password to Lock Note</string>
    <string name="n3_unlock_password">Enter Password to Unlock Note</string>
    <string name="n3_unlock_note">Unlock Note</string>
    <string name="n3_set_alert">Set Alert</string>
    <string name="n3_remove_alert">Remove Alert</string>
    <string name="n3_set_date">Set the date for the alert</string>
    <string name="n3_set_time">Set the time for the alert</string>
    <string name="n3_alert_set">Alert set</string>
    <string name="n3_alert_cancelled">Alert cancelled</string>
    <string name="n3_note_exported">Note exported to </string>
    <string name="n3_confirm_export_note">Export note?</string>
    <string name="n3_notif_time">Alert Time: </string>

    <string name="n4_save_note">Save note?</string>
    <string name="n4_note_saved">Note saved</string>

    <!-- Array used in AlertDialogs when importing/exporting subjects -->
    <string name="p_task">Task</string>

    <!-- Strings used in group P -->
    <string name="p_status">Status</string>
    <string name="p_num">No.</string>
    <string name="p_member">Members</string>
    <string name="p_description">Description</string>
    <string name="p_progress">Progress</string>
    <string name="p_roles">Roles</string>
    <string name="p_role">Role</string>
    <string name="p_media">Media</string>
    <string name="p_settings">Settings</string>
    <string name="p_user">User</string>
    <string name="p_username">Username</string>
    <string name="p_password">Password</string>
    <string name="p_full_name">Full Name</string>

    <string name="p2_linked_subject">Linked Subject</string>
    <string name="p2_subject_missing">Subject Missing</string>
    <string name="p2_subject_missing_desc">The subject required is missing. Would you like to delete the linked subject from the project?</string>

    <string name="p6_project_name">Project Name</string>
    <string name="p6_enable_members">Enable Members</string>
    <string name="p6_enable_roles">Enable Roles</string>
    <string name="p6_project_password">Project Password</string>
    <string name="p6_initial_member_name">Initial Member Name</string>
    <string name="p6_initial_member_password">Initial Member Password</string>
    <string name="p6_custom_admin">Custom admin role</string>
    <string name="p6_custom_member">Custom member role</string>
    <string name="p6_admin_name">Admin Name</string>
    <string name="p6_admin_password">Admin Password</string>
    <string name="p6_member_name">Member Name</string>
    <string name="p6_member_password">Member Password</string>
    <string name="p6_create_project">Create Project</string>
    <string name="p6_default_role">Default Role</string>
    <string name="p6_project_created">Project created</string>

    <string name="p_status_future">Future</string>
    <string name="p_status_ongoing">Ongoing</string>
    <string name="p_status_delayed">Delayed</string>
    <string name="p_status_completed">Completed</string>

    <!-- Strings used in group V -->
    <string name="v1_signup">Sign Up</string>
    <string name="v1_member_created">Member created.</string>
    <string name="v1_project_protected">Protected Project</string>
    <string name="v1_project_protected_password">Enter the password for the project.</string>

    <string name="v2_project_login">Project Login</string>
    <string name="v2_login">Log In</string>
    <string name="v2_signup_desc">New member? Sign up here</string>
    <string name="v2_logging_in">Logging in…</string>

    <string-array name="p_default_role">
        <item>Admin</item>
        <item>Member</item>
    </string-array>

    <string-array name="n_import_subject_format">
        <item>ZIP File</item>
        <item>Custom subject (.subject) file</item>
    </string-array>
</resources>
