<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/m3_home"
        android:title="@string/m3_home" />
    <item android:id="@+id/m3_notes"
        android:title="@string/notes">
        <menu>
            <item
                android:id="@+id/m3_notes_create"
                android:title="@string/m3_new_project" />
            <item
                android:id="@+id/m3_notes_import"
                android:title="@string/m3_data_import" />
        </menu>
    </item>

    <item android:id="@+id/m3_project"
        android:title="@string/projects">
        <menu>
            <item
                android:id="@+id/m3_project_create"
                android:title="@string/m3_new_project" />
            <item
                android:id="@+id/m3_project_import"
                android:title="@string/m3_data_import" />
        </menu>
    </item>

    <item android:id="@+id/m3_exit"
        android:title="@string/exit" />

    <item android:id="@+id/m3_about"
        android:title="@string/m_about" />

</menu>
