<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/n3_edit"
        android:icon="@drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_export"
        android:icon="@drawable/ic_menu_export"
        android:title="@string/data_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_notif"
        android:icon="@drawable/ic_menu_notif"
        android:title="@string/n3_set_alert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_cancel_notif"
        android:icon="@drawable/ic_menu_cancel_notif"
        android:title="@string/n3_remove_alert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_lock"
        android:icon="@drawable/ic_menu_lock"
        android:title="@string/n3_lock_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_del"
        android:icon="@drawable/ic_menu_del"
        android:title="@string/del"
        app:showAsAction="ifRoom" />
</menu>