<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/n2_new_note"
        android:icon="@drawable/ic_menu_add"
        android:title="@string/n2_new_note"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/n2_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/n2_sorting_method"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n2_export"
        android:icon="@drawable/ic_menu_export"
        android:title="@string/data_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n2_del"
        android:icon="@drawable/ic_menu_del"
        android:title="@string/del"
        app:showAsAction="ifRoom" />
</menu>