<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/n3_export"
        android:icon="@drawable/ic_menu_export"
        android:title="@string/data_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_notif"
        android:icon="@drawable/ic_menu_notif"
        android:title="@string/n3_set_alert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_cancel_notif"
        android:icon="@drawable/ic_menu_cancel_notif"
        android:title="@string/n3_remove_alert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/n3_unlock"
        android:icon="@drawable/ic_menu_unlock"
        android:title="@string/n3_unlock_note"
        app:showAsAction="ifRoom" />
</menu>