<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 PC Chin. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/p2_user"
        android:icon="@drawable/ic_menu_user"
        android:title="@string/p_user"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/p2_notes"
        android:icon="@drawable/ic_menu_notes"
        android:title="@string/p2_linked_subject"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/p2_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/p_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/p2_export"
        android:icon="@drawable/ic_menu_export"
        android:title="@string/data_export"
        app:showAsAction="ifRoom" />
</menu>