<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 PC Chin. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/p2_top_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:background="@drawable/p_tableborder"
        android:text="@string/p_num"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/p2_top_member"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@drawable/p_tableborder"
        android:text="@string/p_member"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/p2_top_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@drawable/p_tableborder"
        android:text="@string/p_description"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/p2_top_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:background="@drawable/p_tableborder"
        android:text="@string/p_progress"
        android:textSize="18sp" />
</TableRow>