<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 PC Chin. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/v2_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".project.verify.ProjectLoginFragment">

    <LinearLayout
        android:id="@+id/v2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="18sp"
        android:paddingTop="24sp"
        android:paddingEnd="18sp"
        android:paddingBottom="24sp">

        <TextView
            android:id="@+id/v2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/blank"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/v2_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/blank"
            android:src="@android:color/transparent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="36sp" />

        <TextView
            android:id="@+id/v2_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_username"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/v2_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blank" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/v2_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_role"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/v2_role_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24sp" />

        <TextView
            android:id="@+id/v2_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_password"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/v2_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blank" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="36sp" />

        <Button
            android:id="@+id/v2_button_login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:text="@string/v2_login"
            android:textSize="24sp" />

        <Button
            android:id="@+id/v2_button_signup"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/v2_signup_desc"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>