<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 PC Chin. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/v1_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.project.verify.ProjectSignupFragment" >

    <LinearLayout
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="18sp">

        <TextView
            android:id="@+id/v1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/blank"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24sp" />

        <TextView
            android:id="@+id/v1_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_username"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/v1_username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <TextView
            android:id="@+id/v1_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_full_name"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/v1_fullname_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <TextView
            android:id="@+id/v1_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_password"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/v1_password1_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18sp" />

        <TextView
            android:id="@+id/v1_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reenter_password"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/v1_password2_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24sp" />

        <LinearLayout
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/v1_return"
                style="@style/AppTheme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_weight="1"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text="@string/return_val"
                android:textSize="18sp" />

            <Button
                android:id="@+id/v1_signup"
                style="@style/AppTheme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginEnd="5sp"
                android:layout_weight="1"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:text="@string/v1_signup"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>